Using only one compiler now and given path to binary only in manifest.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: cpp
 sudo: required
 install: autoconf
-compiler:
-  - clang
-  - gcc
+compiler: gcc
 deploy:
   edge: true
   provider: cloudfoundry
