Added .git to null buildpack path

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name: HelloHackathon
-  buildpack: https://github.com/ryandotsmith/null-buildpack
+  buildpack: https://github.com/ryandotsmith/null-buildpack.git
   command: HelloHackathon
   memory: 1024M
   host: CM
