--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@
 applications:
 - name: HelloHackathon
   buildpack: https://github.com/cloudfoundry-incubator/null-buildpack
-  command: HelloHackathon
+  command: start HelloHackathon
   memory: 1024M
   host: CM
