Added path to sync just the binary and code changes too...

--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,7 @@
 applications:
 - name: HelloHackathon
   buildpack: https://github.com/ryandotsmith/null-buildpack.git
+  path: ./HelloHackathon
   command: HelloHackathon
   memory: 1024M
   host: CM
