--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,22 @@
 language: cpp
 sudo: required
-install: autoconf
 compiler: gcc
+before_install:
+  - echo $LANG
+  - sudo apt-get update && sudo apt-get install -y llvm-3.4 llvm-3.4-dev
+  - gem update --system
+  - gem --version
+
+before_script:
+  - travis_retry bundle
+  - travis_retry ./configure --llvm-config llvm-config-3.4l
+
+script: rake ci
+
+after_success:
+  - rake deploy
+
+install: autoconf
 deploy:
   edge: true
   provider: cloudfoundry
