--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: HelloHackathon
+- name: CompareRecords
   buildpack: https://github.com/cloudfoundry/binary-buildpack
   command: null
   memory: 1024M
