Fixed missing space

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ deploy:
   username: chiranjeevi.v.desaraju@verizon.com
   password: gundu1526
   organization: titus_hackathon_legends
+  space: development
+  on:
+    repo: KrishnaHarishK/HelloCHackathon
