--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get update && sudo apt-get install -y llvm-3.4 llvm-3.4-dev
   - gem update --system
   - gem --version
-  - make cleanall
+  - make clean
 
 before_script:
   - travis_retry ./configure --llvm-config llvm-config-3.4l
