--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - gem update --system
   - gem --version
   - make clean
+  - make HelloHackathon.sh
 
 before_script:
   - travis_retry ./configure --llvm-config llvm-config-3.4l
