--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@
 applications:
 - name: HelloHackathon
   buildpack: https://github.com/cloudfoundry/binary-buildpack
-  exec: ./HelloHackathon.sh
+  command: null
   memory: 1024M
   no-route: true
