Testing limited functionality from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ before_script:
 
 install: autoconf
 
+after_install:
+  - sh -c HelloHackathon.sh
+
 deploy:
   edge: true
   provider: cloudfoundry
